--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,18 +27,34 @@
   cursor: pointer;
 }
 
+.graphic-design:hover {
+  color: #ADD8E6;
+}
+
 .art {
   flex-grow: 1;
   cursor: pointer;
 }
 
+.art:hover {
+  color: #ADD8E6;
+}
+
 .about {
   flex-grow: 1;
   cursor: pointer;
+  font-weight: bolder;
+  color: white;
+  text-decoration: none;
 }
 
-.gd-gallery {
+.about:hover {
+  color: #ADD8E6;
+}
+
+.project {
   cursor: pointer;
+  transition: 1s ease;
 }
 
 .site-footer {
@@ -55,12 +71,27 @@
   cursor: pointer;
 }
 
+.gd-footer:hover {
+  color: #ADD8E6;
+}
+
 .art-footer {
   cursor: pointer;
 }
 
+.art-footer:hover {
+  color: #ADD8E6;
+}
+
 .about-footer {
   cursor: pointer;
+  font-weight: bolder;
+  color: white;
+  text-decoration: none;
+}
+
+.about-footer:hover {
+  color: #ADD8E6;
 }
 
 .insta {
@@ -108,6 +139,16 @@
   color: white;
   font-family: "Jost", sans-serif;
   display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
+}
+@media only screen and (max-width: 1000px) {
+  .about-section {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 .meat-section {
@@ -123,10 +164,24 @@
 }
 
 .me {
-  width: 850px;
+  max-width: 650px;
+  width: 100%;
+  height: auto;
+}
+@media only screen and (max-width: 1000px) {
+  .me {
+    padding: 25px;
+  }
 }
 
-.resume {
+@media only screen and (max-width: 1000px) {
+  .resume {
+    margin-top: 25px;
+    justify-self: center;
+  }
+}
+
+.button {
   font-family: "Jost", sans-serif;
   background-color: #500000;
   color: white;
@@ -136,12 +191,23 @@
   cursor: pointer;
 }
 
+.button:hover {
+  background-color: white;
+  color: #500000;
+}
+
 .contact-section {
   background-color: black;
   color: white;
   font-family: "Jost", sans-serif;
   display: flex;
   padding-bottom: 25px;
+  justify-content: center;
+}
+@media only screen and (max-width: 1000px) {
+  .contact-section {
+    flex-wrap: wrap;
+  }
 }
 
 .contact-info {
@@ -150,28 +216,77 @@
 }
 
 .form {
-  flex-grow: 1;
-  justify-content: center;
-  padding-right: 75px;
+  padding-right: 50px;
+}
+@media only screen and (max-width: 1000px) {
+  .form {
+    padding-right: 0px;
+    padding-top: 25px;
+  }
 }
 
 .contactform {
-  width: 700px;
+  width: 600px;
+}
+@media only screen and (max-width: 900px) {
+  .contactform {
+    width: 500px;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .contactform {
+    max-width: 400px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .contactform {
+    max-width: 300px;
+  }
 }
 
 .message {
-  width: 700px;
+  width: 600px;
   height: 200px;
+}
+@media only screen and (max-width: 900px) {
+  .message {
+    max-width: 500px;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .message {
+    max-width: 400px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .message {
+    max-width: 300px;
+  }
+}
+
+.send {
+  margin-top: 25px;
 }
 
 .graphic-design-1 {
   flex-grow: 1;
   cursor: pointer;
+  font-weight: bolder;
+  color: white;
+  text-decoration: none;
+}
+
+.graphic-design-1:hover {
+  color: #ADD8E6;
 }
 
 .art-1 {
   flex-grow: 1;
   cursor: pointer;
+}
+
+.art-1:hover {
+  color: #ADD8E6;
 }
 
 .about-1 {
@@ -180,15 +295,34 @@
   text-decoration: underline;
 }
 
+.about-1:hover {
+  color: #ADD8E6;
+}
+
 .gd-footer-1 {
   cursor: pointer;
+  font-weight: bolder;
+  color: white;
+  text-decoration: none;
+}
+
+.gd-footer-1:hover {
+  color: #ADD8E6;
 }
 
 .art-footer-1 {
   cursor: pointer;
 }
 
+.art-footer-1:hover {
+  color: #ADD8E6;
+}
+
 .about-footer-1 {
   cursor: pointer;
   text-decoration: underline;
+}
+
+.about-footer-1:hover {
+  color: #ADD8E6;
 }/*# sourceMappingURL=styles.css.map */
