--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,6 +19,10 @@
   flex-grow: 15;
   padding-left: 10px;
   cursor: pointer;
+  font-weight: bolder;
+  font-size: 18pt;
+  color: white;
+  text-decoration: none;
 }
 
 .graphic-design {
